--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -229,7 +229,16 @@
     "ptitle": "शीर्षक पोस्ट करें",
     "postDes": "आपको किस बारे में बात करनी है?",
     "toastSuccess": "बधाई हो! आपने कुछ पोस्ट किया है।",
-    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "toastError": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
+    "Title": "शीर्षक",
+    "Text": "मूलपाठ"
+  },
+  "postNotFound": {
+    "post": "पोस्ट",
+    "not found!": "नहीं मिला!",
+    "organization": "संगठन",
+    "post not found!": "पोस्ट नहीं मिला!",
+    "organization not found!": "संगठन नहीं मिला!"
   },
   "orgPostCard": {
     "author": "लेखक",
