--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,7 +2,7 @@
   "loginPage": {
     "title": "Talawa Admin",
     "fromPalisadoes": "An open source application by Palisadoes Foundation volunteers",
-    "talawa_portal": "Talawa Portal",
+    "talawa_portal": "Talawa Admin Portal",
     "login": "Login",
     "register": "Register",
     "firstName": "First Name",
@@ -17,7 +17,7 @@
     "doNotOwnAnAccount": "Do not own an account?"
   },
   "listNavbar": {
-    "talawa_portal": "Talawa Portal",
+    "talawa_portal": "Talawa Admin Portal",
     "roles": "Roles",
     "requests": "Requests",
     "logout": "Logout"
@@ -75,7 +75,7 @@
     "noOrgError": "Organizations not found, please create an organization through dashboard"
   },
   "adminNavbar": {
-    "talawa_portal": "Talawa Portal",
+    "talawa_portal": "Talawa Admin Portal",
     "Dashboard": "Dashboard",
     "People": "People",
     "Events": "Events",
