--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -44,6 +44,12 @@
     "members": "Miembros",
     "manage": "Administrar"
   },
+  "adminDashListCard": {
+    "view": "Ver",
+    "created": "Creado",
+    "admins": "Administradores",
+    "members": "Miembros"
+  },
   "paginationList": {
     "rowsPerPage": "filas por página",
     "all": "Todos"
@@ -81,6 +87,7 @@
     "Plugins": "Complementos",
     "Plugin Store": "Tienda de complementos",
     "allOrganizations": "Todas las organizaciones",
+    "yourOrganization": "Tu organización",
     "notification": "Notificación",
     "settings": "Ajustes",
     "language": "Idioma",
