--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -46,6 +46,12 @@
     "members": "Members",
     "manage": "Manage"
   },
+  "adminDashListCard": {
+    "created": "Created",
+    "admins": "Admins",
+    "members": "Members",
+    "view": "View"
+  },
   "paginationList": {
     "rowsPerPage": "rows per page",
     "all": "All"
@@ -85,6 +91,7 @@
     "Plugins": "Plugins",
     "Plugin Store": "Plugin Store",
     "allOrganizations": "All Organizations",
+    "yourOrganization": "Your Organization",
     "notification": "Notification",
     "settings": "Settings",
     "language": "Language",
