--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -44,6 +44,12 @@
     "members": "成員",
     "manage": "管理"
   },
+  "adminDashListCard": {
+    "view": "查看",
+    "created": "创建于",
+    "admins": "管理员",
+    "members": "成员"
+  },
   "paginationList": {
     "rowsPerPage": "每頁行數",
     "all": "全部"
@@ -81,6 +87,7 @@
     "Plugins": "插件",
     "Plugin Store": "插件商店",
     "allOrganizations": "所有组织",
+    "yourOrganization": "您的组织",
     "notification": "通知",
     "settings": "設置",
     "language": "語",
