Replace Talawa Portal with Talawa Admin Portal #817 (#821)
* Update website title to Talawa Admin Portal in en

* Update website title in fr json file

* Update website title in sp json file

* Update website title in zh json file

* Update website title in hi json file

* Update the test in ListNavbar file

* Update the test in LoginPage.test file

* Create a function for the tex macher to make test

* Fix lint errors in the LandingPage test file

* Remove console.log in LandingPage test file

* Upgrade to use npm instead of yarn

* Delete yarn.lock file

* Fix lint errors

* Fix lint errors

* Update the heading in hi.json file

* Remove unused codes

* Fix lint error in LanfingPage file

* Correct the talawa_portal value in Fr json file

* Correct the talawa_portal value in sp json file

* Remove anused package in package.json file

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -2,7 +2,7 @@
   "loginPage": {
     "title": "Administrador Talawa",
     "fromPalisadoes": "Una aplicación de código abierto de los voluntarios de la Fundación palisados",
-    "talawa_portal": "Portal Talawa",
+    "talawa_portal": "Portal De Administración Talawa",
     "login": "Acceso",
     "register": "Registro",
     "firstName": "Primer nombre",
@@ -18,7 +18,7 @@
     "doNotOwnAnAccount": "¿No tienes una cuenta?"
   },
   "listNavbar": {
-    "talawa_portal": "Portal Talawa",
+    "talawa_portal": "Portal De Administración Talawa",
     "roles": "Roles",
     "requests": "Peticiones",
     "logout": "Cerrar sesión"
@@ -72,7 +72,7 @@
     "enterName": "Ingrese su nombre"
   },
   "adminNavbar": {
-    "talawa_portal": "Portal Talawa",
+    "talawa_portal": "Portal De Administración Talawa",
     "Dashboard": "Tablero",
     "People": "Gente",
     "Events": "Eventos",
