--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -1,7 +1,7 @@
 {
   "loginPage": {
     "title": "Administrateur Talawa",
-    "talawa_portal": "Portail Talawa",
+    "talawa_portal": "Portail D'Administrateur Talawa",
     "fromPalisadoes": "Une application open source par les volontaires de la Fondation Palissades",
     "login": "Connexion",
     "register": "S'inscrire",
@@ -18,7 +18,7 @@
     "doNotOwnAnAccount": "Vous n'avez pas de compte ?"
   },
   "listNavbar": {
-    "talawa_portal": "Portail Talawa",
+    "talawa_portal": "Portail D'Administrateur Talawa",
     "roles": "Les rôles",
     "requests": "Demandes",
     "logout": "Se déconnecter"
@@ -72,7 +72,7 @@
     "enterName": "Entrez le nom"
   },
   "adminNavbar": {
-    "talawa_portal": "Portail Talawa",
+    "talawa_portal": "Portail D'Administrateur Talawa",
     "Dashboard": "Tableau de bord",
     "People": "Personnes",
     "Events": "Événements",
