Added:  event preview modal to view event details (#772)
* added event preview model

* added event preview model

* fixed formatting

* added test

* added test

* added test

* failing tests

* test

* tests

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -183,7 +183,8 @@
     "isPublic": "Est publique",
     "isRegistrable": "Est enregistrable",
     "close": "Proche",
-    "updatePost": "Mettre à jour le message"
+    "updatePost": "Mettre à jour le message",
+    "eventDetails": "Détails de l'évènement"
   },
   "orgPost": {
     "title": "Postes de Talawa",
