--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -187,7 +187,8 @@
     "isPublic": "Is Public",
     "isRegistrable": "Is Registrable",
     "close": "Close",
-    "updatePost": "Update Post"
+    "updatePost": "Update Post",
+    "eventDetails": "Event Details"
   },
   "orgPost": {
     "title": "Talawa Posts",
