Feature: Separation of ADMIN and SUPERADMIN functionalities (#826)
* Initial changes

* Commit to sync repo

* Made changes to OrgList

* Some fixes

* Minor fix

* Added tests for OrgList

* Added tests for OrgList

* Coverage fix

* Required changes added

* Made changes to OrgList

* Some fix

* Some fixes

* fixes test for OrgList

* Some more fixes

* Empty commit

* Lint fix

* Fixed test

* Lint fix

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -47,6 +47,12 @@
     "members": "Members",
     "manage": "Manage"
   },
+  "adminDashListCard": {
+    "created": "Created",
+    "admins": "Admins",
+    "members": "Members",
+    "view": "View"
+  },
   "paginationList": {
     "rowsPerPage": "rows per page",
     "all": "All"
@@ -86,6 +92,7 @@
     "Plugins": "Plugins",
     "Plugin Store": "Plugin Store",
     "allOrganizations": "All Organizations",
+    "yourOrganization": "Your Organization",
     "notification": "Notification",
     "settings": "Settings",
     "language": "Language",
