--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -45,6 +45,12 @@
     "members": "Membres",
     "manage": "Faire en sorte"
   },
+  "adminDashListCard": {
+    "view": "Voir",
+    "created": "Créé",
+    "admins": "Admins",
+    "members": "Membres"
+  },
   "paginationList": {
     "rowsPerPage": "lignes par page",
     "all": "Tout"
@@ -82,6 +88,7 @@
     "Plugins": "Plugins",
     "Plugin Store": "Magasin de plugins",
     "allOrganizations": "Toutes les organisations",
+    "yourOrganization": "Votre organisation",
     "notification": "Notification",
     "settings": "Réglages",
     "language": "Langue",
