Website crash fixed

--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -273,6 +273,7 @@
     "unblock": "अनब्लॉक करें",
     "block": "अवरोध पैदा करना",
     "orgName": "नाम दर्ज करें",
+    "usersNotFound": "उपयोगकर्ता नहीं मिले",
     "blockedSuccessfully": "उपयोगकर्ता को सफलतापूर्वक अवरोधित किया गया",
     "Un-BlockedSuccessfully": "उपयोगकर्ता अन-ब्लॉक किया गया सफलतापूर्वक",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
