--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -277,6 +277,7 @@
     "unblock": "UnBlock",
     "block": "Block",
     "orgName": "Enter Name",
+    "usersNotFound": "Users not found",
     "blockedSuccessfully": "User blocked successfully",
     "Un-BlockedSuccessfully": "User Un-Blocked successfully",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
