--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -292,7 +292,9 @@
     "Un-BlockedSuccessfully": "User Un-Blocked successfully",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
     "allUsers": "All Members",
-    "blockedUsers": "Blocked Users"
+    "blockedUsers": "Blocked Members",
+    "searchFirstName": "Enter First Name",
+    "searchLastName": "Enter Last Name"
   },
   "forgotPassword": {
     "title": "Talawa Forgot Password",
