--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -286,7 +286,11 @@
     "orgName": "नाम दर्ज करें",
     "blockedSuccessfully": "उपयोगकर्ता को सफलतापूर्वक अवरोधित किया गया",
     "Un-BlockedSuccessfully": "उपयोगकर्ता अन-ब्लॉक किया गया सफलतापूर्वक",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
+    "allUsers": "सभी सदस्य",
+    "blockedUsers": "अवरुद्ध सदस्य",
+    "searchFirstName": "प्रथम नाम दर्ज करें",
+    "searchLastName": "अंतिम नाम दर्ज करो"
   },
   "forgotPassword": {
     "title": "तलवा पासवर्ड भूल गए",
