--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -286,7 +286,11 @@
     "orgName": "Ingrese su nombre",
     "blockedSuccessfully": "Usuario bloqueado con éxito",
     "Un-BlockedSuccessfully": "Usuario desbloqueado con éxito",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red.",
+    "allUsers": "Todos los miembros",
+    "blockedUsers": "Miembros bloqueados",
+    "searchFirstName": "Ingrese el nombre",
+    "searchLastName": "Introduzca el apellido"
   },
   "forgotPassword": {
     "title": "Talawa olvidó su contraseña",
