Revert "fixed the Inability to set user roles for specific organizations #556 (#898)"
This reverts commit 891d898eb5543116bb9042a6386b5a12e474159c.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -79,15 +79,7 @@
     "enterName": "Enter Name",
     "noOrgError": "Organizations not found, please create an organization through dashboard",
     "roleUpdated": "Role Updated.",
-    "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
-    "selectRoleAndOrg": "Please select role and organzation",
-    "adminRemoved": "Admin Removed",
-    "memberRemoved": "Member Removed",
-    "role": "Role",
-    "organization": "Organization",
-    "add": "Add",
-    "noOrganizationJoin": "No organization join",
-    "select": "select"
+    "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
   },
   "requests": {
     "title": "Talawa Requests",
@@ -368,6 +360,7 @@
     "saveChanges": "Save Changes",
     "cancel": "Cancel"
   },
+
   "userPasswordUpdate": {
     "previousPassword": "Previous Password",
     "newPassword": "New Password",
@@ -375,6 +368,7 @@
     "saveChanges": "Save Changes",
     "cancel": "Cancel"
   },
+
   "orgDelete": {
     "deleteOrg": "Delete Org"
   },
