--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -76,15 +76,7 @@
     "user": "उपयोगकर्ता",
     "enterName": "नाम दर्ज करें",
     "roleUpdated": "भूमिका अपडेट की गई।",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
-    "selectRoleAndOrg": "कृपया भूमिका और संगठन चुनें",
-    "adminRemoved": "व्यवस्थापक हटाया गया",
-    "memberRemoved": "सदस्य हटाया गया",
-    "role": "भूमिका",
-    "organization": "संगठन",
-    "add": "जोड़ें",
-    "noOrganizationJoin": "कोई संगठन शामिल नहीं",
-    "select": "चुनें"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "requests": {
     "title": "तलवा अनुरोध",
