--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -76,15 +76,7 @@
     "user": "用戶",
     "enterName": "输入名字",
     "roleUpdated": "角色已更新。",
-    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。",
-    "selectRoleAndOrg": "請選擇角色和組織",
-    "adminRemoved": "管理員已刪除",
-    "memberRemoved": "會員已刪除",
-    "role": "角色",
-    "organization": "組織",
-    "add": "添加",
-    "noOrganizationJoin": "沒有組織加入",
-    "select": "選擇"
+    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
   "requests": {
     "title": "塔拉瓦請求",
@@ -364,6 +356,7 @@
     "saveChanges": "保存更改",
     "cancel": "取消"
   },
+
   "userPasswordUpdate": {
     "previousPassword": "以前的密碼",
     "newPassword": "新密碼",
@@ -371,6 +364,7 @@
     "saveChanges": "保存更改",
     "cancel": "取消"
   },
+
   "orgDelete": {
     "deleteOrg": "刪除組織"
   },
