--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -291,8 +291,8 @@
     "blockedSuccessfully": "User blocked successfully",
     "Un-BlockedSuccessfully": "User Un-Blocked successfully",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too.",
-    "allUsers": "All Members",
-    "blockedUsers": "Blocked Members",
+    "allMembers": "All Members",
+    "blockedUsers": "Blocked Users",
     "searchFirstName": "Enter First Name",
     "searchLastName": "Enter Last Name"
   },
