--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -287,8 +287,8 @@
     "blockedSuccessfully": "Usuario bloqueado con éxito",
     "Un-BlockedSuccessfully": "Usuario desbloqueado con éxito",
     "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red.",
-    "allUsers": "Todos los miembros",
-    "blockedUsers": "Miembros bloqueados",
+    "allMembers": "Todos los miembros",
+    "blockedUsers": "Usuarios bloqueados",
     "searchFirstName": "Ingrese el nombre",
     "searchLastName": "Introduzca el apellido"
   },
