--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -440,5 +440,38 @@
     "adminForEvents": "घटनाओं के लिए व्यवस्थापक",
     "addedAsAdmin": "उपयोगकर्ता को व्यवस्थापक के रूप में जोड़ा गया है।",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+  },
+  "userLogin": {
+    "login": "लॉगिन",
+    "forgotPassword":"पासवर्ड भूल गए ?",
+    "loginIntoYourAccount": "अपने खाते में प्रवेश करें",
+    "emailAddress": "ईमेल एड्रेस",
+    "enterEmail": "अपना ईमेल पता दर्ज करें",
+    "password": "पासवर्ड",
+    "enterPassword": "अपना पासवर्ड डालें",
+    "register": "रजिस्टर करें",
+    "invalidDetailsMessage": "कृपया एक वैध ईमेल और पासवर्ड दर्ज करें।",
+    "notAuthorised": "क्षमा मांगना! आप अधिकृत नहीं हैं!",
+    "invalidCredentials": "दर्ज क्रेडेंशियल्स गलत हैं। कृपया मान्य क्रेडेंशियल दर्ज करें।",
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+  },
+  "userRegister": {
+    "register": "रजिस्टर करें",
+    "firstName": "पहला नाम",
+    "enterFirstName": "अपना पहला नाम दर्ज करें",
+    "lastName": "अंतिम नाम",
+    "enterLastName": "अपना अंतिम नाम दर्ज करें",
+    "emailAddress": "ईमेल एड्रेस",
+    "enterEmail": "अपना ईमेल पता दर्ज करें",
+    "password": "पासवर्ड",
+    "enterPassword": "अपना पासवर्ड डालें",
+    "confirmPassword": "पासवर्ड की पुष्टि कीजिये",
+    "enterConfirmPassword": "पुष्टि करने के लिए अपना पासवर्ड दर्ज करें",
+    "alreadyhaveAnAccount": "क्या आपके पास पहले से एक खाता मौजूद है?",
+    "login": "लॉगिन",
+    "afterRegister": "पंजीकरण सफलतापूर्वक हो गया है। कृपया आपके अनुरोध को स्वीकार करने के लिए व्यवस्थापक की प्रतीक्षा करें।",
+    "passwordNotMatch": "पासवर्ड की पुष्टि करें और पासवर्ड मेल नहीं खाता।",
+    "invalidDetailsMessage": "कृपया मान्य विवरण दर्ज करें।",
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   }
 }
