--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -442,5 +442,38 @@
     "adminForEvents": "Administrador de eventos",
     "addedAsAdmin": "El usuario se agrega como administrador.",
     "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+  },
+  "userLogin": {
+    "login": "Acceso",
+    "forgotPassword":"Has olvidado tu contraseña ?",
+    "loginIntoYourAccount": "Inicie sesión en su cuenta",
+    "emailAddress": "correo electrónico",
+    "enterEmail": "Ingrese su dirección de correo electrónico",
+    "password": "Contraseña",
+    "enterPassword": "Ingresa tu contraseña",
+    "register": "Registro",
+    "invalidDetailsMessage": "Por favor, introduzca un correo electrónico y una contraseña válidos.",
+    "notAuthorised": "¡Lo siento! usted no está autorizado!",
+    "invalidCredentials": "Las credenciales ingresadas son incorrectas. Ingrese credenciales válidas.",
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+  },
+  "userRegister": {
+    "register": "Registro",
+    "firstName": "Nombre de pila",
+    "enterFirstName": "Ponga su primer nombre",
+    "lastName": "Apellido",
+    "enterLastName": "Ingresa tu apellido",
+    "emailAddress": "correo electrónico",
+    "enterEmail": "Ingrese su dirección de correo electrónico",
+    "password": "Contraseña",
+    "enterPassword": "Ingresa tu contraseña",
+    "confirmPassword": "confirmar Contraseña",
+    "enterConfirmPassword": "Ingrese su contraseña para confirmar",
+    "alreadyhaveAnAccount": "¿Ya tienes una cuenta?",
+    "login": "Acceso",
+    "afterRegister": "Registrado exitosamente. Espere a que el administrador apruebe su solicitud.",
+    "passwordNotMatch": "Confirmar contraseña y la contraseña no coincide.",
+    "invalidDetailsMessage": "Ingrese detalles válidos.",
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
   }
 }
