--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -442,5 +442,38 @@
     "adminForEvents": "事件管理员",
     "addedAsAdmin": "用戶被添加為管理員。",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+  },
+  "userLogin": {
+    "login": "登錄",
+    "forgotPassword":"忘記密碼 ？",
+    "loginIntoYourAccount": "登錄您的賬戶",
+    "emailAddress": "電子郵件地址",
+    "enterEmail": "輸入你的電子郵箱地址",
+    "password": "密碼",
+    "enterPassword": "輸入您的密碼",
+    "register": "登記",
+    "invalidDetailsMessage": "請輸入有效的電子郵件和密碼",
+    "notAuthorised": "對不起！ 你沒有被授權！",
+    "invalidCredentials": "輸入的憑據不正確。 請輸入有效憑據。",
+    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+  },
+  "userRegister": {
+    "register": "登記",
+    "firstName": "名",
+    "enterFirstName": "輸入您的名字",
+    "lastName": "姓",
+    "enterLastName": "輸入您的姓氏",
+    "emailAddress": "電子郵件地址",
+    "enterEmail": "輸入你的電子郵箱地址",
+    "password": "密碼",
+    "enterPassword": "輸入您的密碼",
+    "confirmPassword": "確認密碼",
+    "enterConfirmPassword": "輸入您的密碼以確認",
+    "alreadyhaveAnAccount": "已有帳戶？",
+    "login": "登錄",
+    "afterRegister": "註冊成功。 請等待管理員批准您的請求。",
+    "passwordNotMatch": "確認密碼和密碼不匹配。",
+    "invalidDetailsMessage": "請輸入有效的詳細信息。",
+    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   }
 }
