--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -439,7 +439,7 @@
     "membershipRequests": "सदस्यता अनुरोध",
     "adminForEvents": "घटनाओं के लिए व्यवस्थापक",
     "addedAsAdmin": "उपयोगकर्ता को व्यवस्थापक के रूप में जोड़ा गया है।",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। कृपया अपना नेटवर्क कनेक्शन जांचें और कुछ देर प्रतीक्षा करें।"
   },
   "userLogin": {
     "login": "लॉगिन",
@@ -453,7 +453,7 @@
     "invalidDetailsMessage": "कृपया एक वैध ईमेल और पासवर्ड दर्ज करें।",
     "notAuthorised": "क्षमा मांगना! आप अधिकृत नहीं हैं!",
     "invalidCredentials": "दर्ज क्रेडेंशियल्स गलत हैं। कृपया मान्य क्रेडेंशियल दर्ज करें।",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। कृपया अपना नेटवर्क कनेक्शन जांचें और कुछ देर प्रतीक्षा करें।"
   },
   "userRegister": {
     "register": "रजिस्टर करें",
@@ -470,8 +470,33 @@
     "alreadyhaveAnAccount": "क्या आपके पास पहले से एक खाता मौजूद है?",
     "login": "लॉगिन",
     "afterRegister": "पंजीकरण सफलतापूर्वक हो गया है। कृपया आपके अनुरोध को स्वीकार करने के लिए व्यवस्थापक की प्रतीक्षा करें।",
-    "passwordNotMatch": "पासवर्ड की पुष्टि करें और पासवर्ड मेल नहीं खाता।",
+    "passwordNotMatch": "पासवर्ड मेल नहीं खाता. पासवर्ड की पुष्टि करें और पुनः प्रयास करें।",
     "invalidDetailsMessage": "कृपया मान्य विवरण दर्ज करें।",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। कृपया अपना नेटवर्क कनेक्शन जांचें और कुछ देर प्रतीक्षा करें।"
+  },
+  "userNavbar": {
+    "talawa": "तलावा",
+    "home": "घर",
+    "people": "लोग",
+    "events": "आयोजन",
+    "chat": "बातचीत",
+    "donate": "दान देना",
+    "myTasks": "मेरा काम",
+    "settings": "समायोजन",
+    "language": "भाषा",
+    "logout": "लॉग आउट",
+    "close": "बंद करना"
+  },
+  "userOrganizations": {
+    "allOrganizations":"सभी संगठन",
+    "joinedOrganizations": "संगठन शामिल हुए",
+    "createdOrganizations": "संगठन बनाये गये",
+    "search": "खोज",
+    "nothingToShow": "यहां दिखाने के लिए कुछ भी नहीं है."
+  },
+  "userSidebar": {
+    "yourOrganizations": "आपके संगठन",
+    "noOrganizations": "आप अभी तक किसी संगठन में शामिल नहीं हुए हैं.",
+    "viewAll": "सभी को देखें"
   }
 }
