--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -441,7 +441,7 @@
     "membershipRequests": "Solicitudes de membresía",
     "adminForEvents": "Administrador de eventos",
     "addedAsAdmin": "El usuario se agrega como administrador.",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. Compruebe amablemente su conexión de red y espere un momento."
   },
   "userLogin": {
     "login": "Acceso",
@@ -455,7 +455,7 @@
     "invalidDetailsMessage": "Por favor, introduzca un correo electrónico y una contraseña válidos.",
     "notAuthorised": "¡Lo siento! usted no está autorizado!",
     "invalidCredentials": "Las credenciales ingresadas son incorrectas. Ingrese credenciales válidas.",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. Compruebe amablemente su conexión de red y espere un momento."
   },
   "userRegister": {
     "register": "Registro",
@@ -472,8 +472,33 @@
     "alreadyhaveAnAccount": "¿Ya tienes una cuenta?",
     "login": "Acceso",
     "afterRegister": "Registrado exitosamente. Espere a que el administrador apruebe su solicitud.",
-    "passwordNotMatch": "Confirmar contraseña y la contraseña no coincide.",
+    "passwordNotMatch": "La contraseña no coincide. Confirme la contraseña y vuelva a intentarlo.",
     "invalidDetailsMessage": "Ingrese detalles válidos.",
-    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
+    "talawaApiUnavailable": "El servicio Talawa-API no está disponible. Compruebe amablemente su conexión de red y espere un momento."
+  },
+  "userNavbar": {
+    "talawa": "Talawa",
+    "home": "Hogar",
+    "people": "Gente",
+    "events": "Eventos",
+    "chat": "Charlar",
+    "donate": "Donar",
+    "myTasks": "Mis tareas",
+    "settings": "Ajustes",
+    "language": "Idioma",
+    "logout": "Cerrar sesión",
+    "close": "Cerca"
+  },
+  "userOrganizations": {
+    "allOrganizations":"Todas las organizaciones",
+    "joinedOrganizations": "Organizaciones unidas",
+    "createdOrganizations": "Organizaciones creadas",
+    "search": "Buscar",
+    "nothingToShow": "Nada que mostrar aquí."
+  },
+  "userSidebar": {
+    "yourOrganizations": "Tus Organizaciones",
+    "noOrganizations": "Aún no te has unido a ninguna organización.",
+    "viewAll": "Ver todo"
   }
 }
