--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -441,7 +441,7 @@
     "membershipRequests": "会员申请",
     "adminForEvents": "事件管理员",
     "addedAsAdmin": "用戶被添加為管理員。",
-    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+    "talawaApiUnavailable": "Talawa-API 服務不可用。 請檢查您的網絡連接並稍等片刻。"
   },
   "userLogin": {
     "login": "登錄",
@@ -455,7 +455,7 @@
     "invalidDetailsMessage": "請輸入有效的電子郵件和密碼",
     "notAuthorised": "對不起！ 你沒有被授權！",
     "invalidCredentials": "輸入的憑據不正確。 請輸入有效憑據。",
-    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+    "talawaApiUnavailable": "Talawa-API 服務不可用。 請檢查您的網絡連接並稍等片刻。"
   },
   "userRegister": {
     "register": "登記",
@@ -472,8 +472,33 @@
     "alreadyhaveAnAccount": "已有帳戶？",
     "login": "登錄",
     "afterRegister": "註冊成功。 請等待管理員批准您的請求。",
-    "passwordNotMatch": "確認密碼和密碼不匹配。",
+    "passwordNotMatch": "密碼不匹配。 確認密碼並重試。",
     "invalidDetailsMessage": "請輸入有效的詳細信息。",
-    "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
+    "talawaApiUnavailable": "Talawa-API 服務不可用。 請檢查您的網絡連接並稍等片刻。"
+  },
+  "userNavbar": {
+    "talawa": "塔拉瓦",
+    "home": "家",
+    "people": "人們",
+    "events": "活動",
+    "chat": "聊天",
+    "donate": "捐",
+    "myTasks": "我的任務",
+    "settings": "設置",
+    "language": "語言",
+    "logout": "登出",
+    "close": "關閉"
+  },
+  "userOrganizations": {
+    "allOrganizations":"所有組織",
+    "joinedOrganizations": "加入組織",
+    "createdOrganizations": "創建的組織",
+    "search": "搜索",
+    "nothingToShow": "這裡沒有什麼可展示的。"
+  },
+  "userSidebar": {
+    "yourOrganizations": "您的組織",
+    "noOrganizations": "您還沒有加入任何組織。",
+    "viewAll": "查看全部"
   }
 }
