Add Home Screen along with other components

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -504,5 +504,21 @@
     "yourOrganizations": "Your Organizations",
     "noOrganizations": "You haven't joined any organization yet.",
     "viewAll": "View all"
+  },
+  "organizationSidebar": {
+    "viewAll": "View all",
+    "events": "Events",
+    "members": "Members",
+    "noEvents": "No Events to show",
+    "noMembers": "No Members to show"
+  },
+  "postCard": {
+    "likes": "Likes",
+    "comments": "Comments"
+  },
+  "home": {
+    "feed": "Feed",
+    "pinnedPosts": "View Pinned Posts",
+    "somethingOnYourMind": "Something on your mind?"
   }
 }
