Login page 100% code c=coverage

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -24,7 +24,8 @@
     "fillCorrectly": "Fill all the Details Correctly.",
     "notAuthorised": "Sorry! you are not Authorised!",
     "notFound": "User not found!",
-    "successfullyRegistered": "Successfully Registered. Please wait until you will be approved."
+    "successfullyRegistered": "Successfully Registered. Please wait until you will be approved.",
+    "login_to_admin_portal": "Admin Portal Login"
   },
   "listNavbar": {
     "talawa_portal": "Talawa Admin Portal",
