--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -24,7 +24,8 @@
     "fillCorrectly": "Complete todos los detalles correctamente.",
     "notAuthorised": "¡Lo siento! ¡No estás autorizado!",
     "notFound": "¡Usuario no encontrado!",
-    "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado"
+    "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado",
+    "login_to_admin_portal": "Inicio de sesión en el portal de administración"
   },
   "listNavbar": {
     "talawa_portal": "Portal De Administración Talawa",
