--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -25,7 +25,8 @@
     "notAuthorised": "¡Lo siento! ¡No estás autorizado!",
     "notFound": "¡Usuario no encontrado!",
     "successfullyRegistered": "Registrado con éxito. Espere hasta que sea aprobado",
-    "login_to_admin_portal": "Inicio de sesión en el portal de administración"
+    "login_to_admin_portal": "Inicio de sesión en el portal de administración",
+    "OR": "O"
   },
   "listNavbar": {
     "talawa_portal": "Portal De Administración Talawa",
